--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -2,13 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "d13382eb-0be4-4c9a-9b5b-bc241518cf88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "Sum of 10 and 20 is: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "print(a)\n",
+    "\n",
+    "b=20\n",
+    "print(b)\n",
+    "\n",
+    "sum=a+b\n",
+    "print(\"Sum of\", a, \"and\",b,\"is:\", sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df946c0-d47d-46ed-861f-3a15027f6194",
+   "metadata": {},
+   "source": [
+    "This is My First Python Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9f22c82a-1380-4d7f-9e39-a20ef38c2278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e8b726da-744a-486f-b343-7f162ad78be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number:  44\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44  is Even Number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter the first number: \"))\n",
+    "if num%2==0:\n",
+    "    print(num,\" is Even Number.\")\n",
+    "else:\n",
+    "    print(num,\" is Odd Number.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fac1eed6-c487-4d27-8c90-19a3be15d173",
+   "id": "bd9a7d01-0dd1-40a6-b12d-10ec65c97e89",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write the sum of even number using while loop.\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
