--- a/Day_2.ipynb
+++ b/Day_2.ipynb
@@ -3,138 +3,299 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88d9f87e-843b-46c8-b4d7-8739999ef879",
+   "id": "5adf9dfe-0f41-4f19-bf03-78308646efe6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 3 5 2 1 1]\n",
-      " [5 1 8 3 7 3]\n",
-      " [7 1 7 2 5 8]\n",
-      " [3 5 6 9 3 7]] \n",
-      "\n",
-      "hsplit\n",
-      " [array([[1, 3, 5],\n",
-      "       [5, 1, 8],\n",
-      "       [7, 1, 7],\n",
-      "       [3, 5, 6]]), array([[2, 1, 1],\n",
-      "       [3, 7, 3],\n",
-      "       [2, 5, 8],\n",
-      "       [9, 3, 7]])]\n",
-      "vsplit\n",
-      " [array([[1, 3, 5, 2, 1, 1],\n",
-      "       [5, 1, 8, 3, 7, 3]]), array([[7, 1, 7, 2, 5, 8],\n",
-      "       [3, 5, 6, 9, 3, 7]])]\n"
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "# numpy split ans stack -vstack and hstack- hsplit and vsplit\n",
-    "import numpy as np\n",
-    "arr =np.random.randint(1,10,size=(4,6))\n",
-    "print(arr,\"\\n\")\n",
-    "\n",
-    "# split\n",
-    "print(\"hsplit\\n\",np.hsplit(arr,2))\n",
-    "print(\"vsplit\\n\",np.vsplit(arr,2))"
+    "# List\n",
+    "print([1,2,3,4,5])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c72e6606-5a2e-4a64-81ed-972421c9f60d",
+   "id": "f7281f81-aef1-4d09-adb8-4b377eb4cb2b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hsplit\n",
-      " [array([[1, 3],\n",
-      "       [5, 1],\n",
-      "       [7, 1],\n",
-      "       [3, 5]]), array([[5, 2, 1, 1],\n",
-      "       [8, 3, 7, 3],\n",
-      "       [7, 2, 5, 8],\n",
-      "       [6, 9, 3, 7]])]\n"
+      "[1, 'Hello World', True, ['Apple', 'Mango', 'papaya'], 5.9]\n"
      ]
     }
    ],
    "source": [
-    "print(\"hsplit\\n\",np.hsplit(arr,[2]))"
+    "print([1,\"Hello World\",True,['Apple','Mango', 'papaya'],5.9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "291aaeaa-869e-4f24-8ef8-6176563123e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Hello World\n",
+      "True\n",
+      "['Apple', 'Mango', 'papaya']\n",
+      "5.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=([1,\"Hello World\",True,['Apple','Mango', 'papaya'],5.9])\n",
+    "for i in l:\n",
+    "    print(i)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "651615dd-8e45-436e-956f-443e6100bcd7",
+   "id": "96c73d27-f4f8-4032-be83-9bc2eb71522a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hstack\n",
-      " [2 3 5 6]\n"
+      "<class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "arr1=np.array([[2,3],[5,6]]) # horizontal direction it stack the array\n",
-    "# hstack \n",
-    "print(\"hstack\\n\",np.hstack(arr1))"
+    "# type() function\n",
+    "print(type([1,\"Hello World\",True,['Apple','Mango', 'papaya'],5.9]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1deb54f8-56f2-4ac3-992e-0a3ffce60078",
+   "id": "63331ccd-e2d2-4394-811d-403088a12e91",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vstack\n",
-      " [[2 3]\n",
-      " [5 6]]\n"
+      "<class 'list'>\n"
      ]
     }
    ],
    "source": [
-    "arr1=np.array([[2,3],[5,6]]) # In vertical direction it stack the element.\n",
-    "# vstack \n",
-    "print(\"vstack\\n\",np.vstack(arr1))"
+    "# type() function\n",
+    "l=([1,\"Hello World\",True,['Apple','Mango', 'papaya'],5.9])\n",
+    "print(type(l))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "88164024-92ed-4273-af77-e9694846911a",
+   "id": "3273eab0-6720-4cde-b677-bdbe0c0bb298",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 3 4 1]\n",
-      " [5 6 7 3]]\n"
+      "['Cars', 'Cars', 'Watches', 'Building']\n"
      ]
     }
    ],
    "source": [
-    "a1=np.array([[2,3,4],[5,6,7]])\n",
-    "a2=np.array([[1],[3]])\n",
-    "a3=np.hstack((a1,a2))\n",
-    "print(a3)"
+    "print(['Cars',\"Cars\",'Watches','Building'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ed995fcc-cc68-470f-bb79-afa66eabca9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(['cars','watches','Building']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ef5aefff-bcee-4f8f-b96b-1d1813da3457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type([20,35.8,True,\"Sushma\",False]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0b972d7a-6737-4467-9a76-7a334e98a21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 10, 10, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tuple in Python\n",
+    "print((20,10,10,4,5,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7140998d-e499-4399-841b-5eddcc133e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type((20,10,4,5,6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a77a59d5-2481-422b-8f29-8df0abb085d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set\n",
+    "# {}\n",
+    "print({1,1,2,3,4,4,5})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c10f8ed0-e9af-4795-bff0-76f287c6b1de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{56, 50, 10, 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print({20,50,10,56})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2b5379e8-142f-48c0-b41a-ca975b52bbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type({1,4,5,67,89}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "799534ef-6a6d-47fc-863b-c66f27b9d88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type({'trupti','Nira','Dora'}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a9114414-9791-4100-8ab9-dbfe9034bfca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary\n",
+    "print(type({'Name':'Sushma','Last_name':'Ruwali'}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74a57fc-b60b-427a-8331-616c926214bb",
+   "id": "de50999f-5410-4b3e-835f-08dde5f8409d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2e5fe49-5397-4901-a3d8-1109dca00264",
    "metadata": {},
    "outputs": [],
    "source": []
